site/api/4.09/compilerlibref/Misc.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.09</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Misc</a></div><ul></ul></nav></header>

<h1>Module <a href="type_Misc.html">Misc</a></h1>

<pre><span id="MODULEMisc"><span class="keyword">module</span> Misc</span>: <code class="code"><span class="keyword">sig</span></code> <a href="Misc.html">..</a> <code class="code"><span class="keyword">end</span></code></pre><div class="info module top">
<div class="info-desc">
<p>Miscellaneous useful types and functions</p>

<p><b>Warning:</b> this module is unstable and part of
  <a href="Compiler_libs.html">compiler-libs</a>.</p>
</div>
</div>
<hr width="100%">

<pre><span id="VALfatal_error"><span class="keyword">val</span> fatal_error</span> : <code class="type">string -&gt; 'a</code></pre>
<pre><span id="VALfatal_errorf"><span class="keyword">val</span> fatal_errorf</span> : <code class="type">('a, Format.formatter, unit, 'b) format4 -&gt; 'a</code></pre>
<pre><span id="EXCEPTIONFatal_error"><span class="keyword">exception</span> Fatal_error</span></pre>

<pre><span id="VALtry_finally"><span class="keyword">val</span> try_finally</span> : <code class="type">?always:(unit -&gt; unit) -&gt; ?exceptionally:(unit -&gt; unit) -&gt; (unit -&gt; 'a) -&gt; 'a</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">try_finally&nbsp;work&nbsp;~always&nbsp;~exceptionally</code> is designed to run code
    in <code class="code">work</code> that may fail with an exception, and has two kind of
    cleanup routines: <code class="code">always</code>, that must be run after any execution
    of the function (typically, freeing system resources), and
    <code class="code">exceptionally</code>, that should be run only if <code class="code">work</code> or <code class="code">always</code>
    failed with an exception (typically, undoing user-visible state
    changes that would only make sense if the function completes
    correctly). For example:</p>

<pre class="codepre"><code class="code">      <span class="keyword">let</span> objfile = outputprefix ^ <span class="string">".cmo"</span> <span class="keyword">in</span>
      <span class="keyword">let</span> oc = open_out_bin objfile <span class="keyword">in</span>
      <span class="constructor">Misc</span>.try_finally
        (<span class="keyword">fun</span> () <span class="keywordsign">-&gt;</span>
           bytecode
           ++ <span class="constructor">Timings</span>.(accumulate_time (<span class="constructor">Generate</span> sourcefile))
               (<span class="constructor">Emitcode</span>.to_file oc modulename objfile);
           <span class="constructor">Warnings</span>.check_fatal ())
        ~always:(<span class="keyword">fun</span> () <span class="keywordsign">-&gt;</span> close_out oc)
        ~exceptionally:(<span class="keyword">fun</span> _exn <span class="keywordsign">-&gt;</span> remove_file objfile);
    </code></pre>
<p>If <code class="code">exceptionally</code> fail with an exception, it is propagated as
    usual.</p>

<p>If <code class="code">always</code> or <code class="code">exceptionally</code> use exceptions internally for
    control-flow but do not raise, then <code class="code">try_finally</code> is careful to
    preserve any exception backtrace coming from <code class="code">work</code> or <code class="code">always</code>
    for easier debugging.</p>
</div>
</div>

<pre><span id="VALmap_end"><span class="keyword">val</span> map_end</span> : <code class="type">('a -&gt; 'b) -&gt; 'a list -&gt; 'b list -&gt; 'b list</code></pre>
<pre><span id="VALmap_left_right"><span class="keyword">val</span> map_left_right</span> : <code class="type">('a -&gt; 'b) -&gt; 'a list -&gt; 'b list</code></pre>
<pre><span id="VALfor_all2"><span class="keyword">val</span> for_all2</span> : <code class="type">('a -&gt; 'b -&gt; bool) -&gt; 'a list -&gt; 'b list -&gt; bool</code></pre>
<pre><span id="VALreplicate_list"><span class="keyword">val</span> replicate_list</span> : <code class="type">'a -&gt; int -&gt; 'a list</code></pre>
<pre><span id="VALlist_remove"><span class="keyword">val</span> list_remove</span> : <code class="type">'a -&gt; 'a list -&gt; 'a list</code></pre>
<pre><span id="VALsplit_last"><span class="keyword">val</span> split_last</span> : <code class="type">'a list -&gt; 'a list * 'a</code></pre>
<pre><span id="VALmay"><span class="keyword">val</span> may</span> : <code class="type">('a -&gt; unit) -&gt; 'a option -&gt; unit</code></pre>
<pre><span id="VALmay_map"><span class="keyword">val</span> may_map</span> : <code class="type">('a -&gt; 'b) -&gt; 'a option -&gt; 'b option</code></pre>
<pre><code><span id="TYPEref_and_value"><span class="keyword">type</span> <code class="type"></code>ref_and_value</span> = </code></pre><table class="typetable">
<tbody><tr>
<td align="left" valign="top">
<code><span class="keyword">|</span></code></td>
<td align="left" valign="top">
<code><span id="TYPEELTref_and_value.R"><span class="constructor">R</span></span> <span class="keyword">:</span> <code class="type">'a ref * 'a</code> <span class="keyword">-&gt;</span> <code class="type"><a href="Misc.html#TYPEref_and_value">ref_and_value</a></code></code></td>

</tr></tbody></table>



<pre><span id="VALprotect_refs"><span class="keyword">val</span> protect_refs</span> : <code class="type"><a href="Misc.html#TYPEref_and_value">ref_and_value</a> list -&gt; (unit -&gt; 'a) -&gt; 'a</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">protect_refs&nbsp;l&nbsp;f</code> temporarily sets <code class="code">r</code> to <code class="code">v</code> for each <code class="code"><span class="constructor">R</span>&nbsp;(r,&nbsp;v)</code> in <code class="code">l</code>
    while executing <code class="code">f</code>. The previous contents of the references is restored
    even if <code class="code">f</code> raises an exception.</p>
</div>
</div>

<pre><span id="MODULEStdlib"><span class="keyword">module</span> <a href="Misc.Stdlib.html">Stdlib</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Misc.Stdlib.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<pre><span id="VALfind_in_path"><span class="keyword">val</span> find_in_path</span> : <code class="type">string list -&gt; string -&gt; string</code></pre>
<pre><span id="VALfind_in_path_rel"><span class="keyword">val</span> find_in_path_rel</span> : <code class="type">string list -&gt; string -&gt; string</code></pre>
<pre><span id="VALfind_in_path_uncap"><span class="keyword">val</span> find_in_path_uncap</span> : <code class="type">string list -&gt; string -&gt; string</code></pre>
<pre><span id="VALremove_file"><span class="keyword">val</span> remove_file</span> : <code class="type">string -&gt; unit</code></pre>
<pre><span id="VALexpand_directory"><span class="keyword">val</span> expand_directory</span> : <code class="type">string -&gt; string -&gt; string</code></pre>
<pre><span id="VALsplit_path_contents"><span class="keyword">val</span> split_path_contents</span> : <code class="type">?sep:char -&gt; string -&gt; string list</code></pre>
<pre><span id="VALcreate_hashtable"><span class="keyword">val</span> create_hashtable</span> : <code class="type">int -&gt; ('a * 'b) list -&gt; ('a, 'b) Hashtbl.t</code></pre>
<pre><span id="VALcopy_file"><span class="keyword">val</span> copy_file</span> : <code class="type">in_channel -&gt; out_channel -&gt; unit</code></pre>
<pre><span id="VALcopy_file_chunk"><span class="keyword">val</span> copy_file_chunk</span> : <code class="type">in_channel -&gt; out_channel -&gt; int -&gt; unit</code></pre>
<pre><span id="VALstring_of_file"><span class="keyword">val</span> string_of_file</span> : <code class="type">in_channel -&gt; string</code></pre>
<pre><span id="VALoutput_to_file_via_temporary"><span class="keyword">val</span> output_to_file_via_temporary</span> : <code class="type">?mode:open_flag list -&gt;<br>       string -&gt; (string -&gt; out_channel -&gt; 'a) -&gt; 'a</code></pre>
<pre><span id="VALprotect_writing_to_file"><span class="keyword">val</span> protect_writing_to_file</span> : <code class="type">filename:string -&gt; f:(out_channel -&gt; 'a) -&gt; 'a</code></pre><div class="info ">
<div class="info-desc">
<p>Open the given <code class="code">filename</code> for writing (in binary mode), pass the
    <code class="code">out_channel</code> to the given function, then close the channel. If the function
    raises an exception then <code class="code">filename</code> will be removed.</p>
</div>
</div>

<pre><span id="VALlog2"><span class="keyword">val</span> log2</span> : <code class="type">int -&gt; int</code></pre>
<pre><span id="VALalign"><span class="keyword">val</span> align</span> : <code class="type">int -&gt; int -&gt; int</code></pre>
<pre><span id="VALno_overflow_add"><span class="keyword">val</span> no_overflow_add</span> : <code class="type">int -&gt; int -&gt; bool</code></pre>
<pre><span id="VALno_overflow_sub"><span class="keyword">val</span> no_overflow_sub</span> : <code class="type">int -&gt; int -&gt; bool</code></pre>
<pre><span id="VALno_overflow_mul"><span class="keyword">val</span> no_overflow_mul</span> : <code class="type">int -&gt; int -&gt; bool</code></pre>
<pre><span id="VALno_overflow_lsl"><span class="keyword">val</span> no_overflow_lsl</span> : <code class="type">int -&gt; int -&gt; bool</code></pre>
<pre><span id="MODULEInt_literal_converter"><span class="keyword">module</span> <a href="Misc.Int_literal_converter.html">Int_literal_converter</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Misc.Int_literal_converter.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<pre><span id="VALchop_extensions"><span class="keyword">val</span> chop_extensions</span> : <code class="type">string -&gt; string</code></pre>
<pre><span id="VALsearch_substring"><span class="keyword">val</span> search_substring</span> : <code class="type">string -&gt; string -&gt; int -&gt; int</code></pre>
<pre><span id="VALreplace_substring"><span class="keyword">val</span> replace_substring</span> : <code class="type">before:string -&gt; after:string -&gt; string -&gt; string</code></pre>
<pre><span id="VALrev_split_words"><span class="keyword">val</span> rev_split_words</span> : <code class="type">string -&gt; string list</code></pre>
<pre><span id="VALget_ref"><span class="keyword">val</span> get_ref</span> : <code class="type">'a list ref -&gt; 'a list</code></pre>
<pre><span id="VALset_or_ignore"><span class="keyword">val</span> set_or_ignore</span> : <code class="type">('a -&gt; 'b option) -&gt; 'b option ref -&gt; 'a -&gt; unit</code></pre>
<pre><span id="VALfst3"><span class="keyword">val</span> fst3</span> : <code class="type">'a * 'b * 'c -&gt; 'a</code></pre>
<pre><span id="VALsnd3"><span class="keyword">val</span> snd3</span> : <code class="type">'a * 'b * 'c -&gt; 'b</code></pre>
<pre><span id="VALthd3"><span class="keyword">val</span> thd3</span> : <code class="type">'a * 'b * 'c -&gt; 'c</code></pre>
<pre><span id="VALfst4"><span class="keyword">val</span> fst4</span> : <code class="type">'a * 'b * 'c * 'd -&gt; 'a</code></pre>
<pre><span id="VALsnd4"><span class="keyword">val</span> snd4</span> : <code class="type">'a * 'b * 'c * 'd -&gt; 'b</code></pre>
<pre><span id="VALthd4"><span class="keyword">val</span> thd4</span> : <code class="type">'a * 'b * 'c * 'd -&gt; 'c</code></pre>
<pre><span id="VALfor4"><span class="keyword">val</span> for4</span> : <code class="type">'a * 'b * 'c * 'd -&gt; 'd</code></pre>
<pre><span id="MODULELongString"><span class="keyword">module</span> <a href="Misc.LongString.html">LongString</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Misc.LongString.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<pre><span id="VALedit_distance"><span class="keyword">val</span> edit_distance</span> : <code class="type">string -&gt; string -&gt; int -&gt; int option</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">edit_distance&nbsp;a&nbsp;b&nbsp;cutoff</code> computes the edit distance between
    strings <code class="code">a</code> and <code class="code">b</code>. To help efficiency, it uses a cutoff: if the
    distance <code class="code">d</code> is smaller than <code class="code">cutoff</code>, it returns <code class="code"><span class="constructor">Some</span>&nbsp;d</code>, else
    <code class="code"><span class="constructor">None</span></code>.</p>

<p>The distance algorithm currently used is Damerau-Levenshtein: it
    computes the number of insertion, deletion, substitution of
    letters, or swapping of adjacent letters to go from one word to the
    other. The particular algorithm may change in the future.</p>
</div>
</div>

<pre><span id="VALspellcheck"><span class="keyword">val</span> spellcheck</span> : <code class="type">string list -&gt; string -&gt; string list</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">spellcheck&nbsp;env&nbsp;name</code> takes a list of names <code class="code">env</code> that exist in
    the current environment and an erroneous <code class="code">name</code>, and returns a
    list of suggestions taken from <code class="code">env</code>, that are close enough to
    <code class="code">name</code> that it may be a typo for one of them.</p>
</div>
</div>

<pre><span id="VALdid_you_mean"><span class="keyword">val</span> did_you_mean</span> : <code class="type">Format.formatter -&gt; (unit -&gt; string list) -&gt; unit</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">did_you_mean&nbsp;ppf&nbsp;get_choices</code> hints that the user may have meant
    one of the option returned by calling <code class="code">get_choices</code>. It does nothing
    if the returned list is empty.</p>

<p>The <code class="code">unit&nbsp;<span class="keywordsign">-&gt;</span>&nbsp;...</code> thunking is meant to delay any potentially-slow
    computation (typically computing edit-distance with many things
    from the current environment) to when the hint message is to be
    printed. You should print an understandable error message before
    calling <code class="code">did_you_mean</code>, so that users get a clear notification of
    the failure even if producing the hint is slow.</p>
</div>
</div>

<pre><span id="VALcut_at"><span class="keyword">val</span> cut_at</span> : <code class="type">string -&gt; char -&gt; string * string</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code"><span class="constructor">String</span>.cut_at&nbsp;s&nbsp;c</code> returns a pair containing the sub-string before
   the first occurrence of <code class="code">c</code> in <code class="code">s</code>, and the sub-string after the
   first occurrence of <code class="code">c</code> in <code class="code">s</code>.
   <code class="code"><span class="keyword">let</span>&nbsp;(before,&nbsp;after)&nbsp;=&nbsp;<span class="constructor">String</span>.cut_at&nbsp;s&nbsp;c&nbsp;<span class="keyword">in</span><br>
&nbsp;&nbsp;&nbsp;&nbsp;before&nbsp;^&nbsp;<span class="constructor">String</span>.make&nbsp;1&nbsp;c&nbsp;^&nbsp;after</code> is the identity if <code class="code">s</code> contains <code class="code">c</code>.</p>

<p>Raise <code class="code"><span class="constructor">Not_found</span></code> if the character does not appear in the string</p>
</div>
<ul class="info-attributes">
<li><b>Since</b> 4.01</li>
</ul>
</div>

<pre><span id="MODULEColor"><span class="keyword">module</span> <a href="Misc.Color.html">Color</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Misc.Color.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<pre><span id="MODULEError_style"><span class="keyword">module</span> <a href="Misc.Error_style.html">Error_style</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Misc.Error_style.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<pre><span id="VALnormalise_eol"><span class="keyword">val</span> normalise_eol</span> : <code class="type">string -&gt; string</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">normalise_eol&nbsp;s</code> returns a fresh copy of <code class="code">s</code> with any '\r' characters
   removed. Intended for pre-processing text which will subsequently be printed
   on a channel which performs EOL transformations (i.e. Windows)</p>
</div>
</div>

<pre><span id="VALdelete_eol_spaces"><span class="keyword">val</span> delete_eol_spaces</span> : <code class="type">string -&gt; string</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">delete_eol_spaces&nbsp;s</code> returns a fresh copy of <code class="code">s</code> with any end of
   line spaces removed. Intended to normalize the output of the
   toplevel for tests.</p>
</div>
</div>

<pre><span id="VALpp_two_columns"><span class="keyword">val</span> pp_two_columns</span> : <code class="type">?sep:string -&gt;<br>       ?max_lines:int -&gt; Format.formatter -&gt; (string * string) list -&gt; unit</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">pp_two_columns&nbsp;?sep&nbsp;?max_lines&nbsp;ppf&nbsp;l</code> prints the lines in <code class="code">l</code> as two
   columns separated by <code class="code">sep</code> ("|" by default). <code class="code">max_lines</code> can be used to
   indicate a maximum number of lines to print -- an ellipsis gets inserted at
   the middle if the input has too many lines.</p>

<p>Example:</p>

<pre class="verbatim">pp_two_columns ~max_lines:3 Format.std_formatter [
      "abc", "hello";
      "def", "zzz";
      "a"  , "bllbl";
      "bb" , "dddddd";
    ]</pre>
<p>prints</p>

<pre class="verbatim">    abc | hello
    ...
    bb  | dddddd
   </pre></div>
</div>

<pre><span id="VALshow_config_and_exit"><span class="keyword">val</span> show_config_and_exit</span> : <code class="type">unit -&gt; unit</code></pre><div class="info ">
<div class="info-desc">
<p>configuration variables</p>
</div>
</div>

<pre><span id="VALshow_config_variable_and_exit"><span class="keyword">val</span> show_config_variable_and_exit</span> : <code class="type">string -&gt; unit</code></pre>
<pre><span id="VALget_build_path_prefix_map"><span class="keyword">val</span> get_build_path_prefix_map</span> : <code class="type">unit -&gt; <a href="Build_path_prefix_map.html#TYPEmap">Build_path_prefix_map.map</a> option</code></pre><div class="info ">
<div class="info-desc">
<p>Returns the map encoded in the <code class="code"><span class="constructor">BUILD_PATH_PREFIX_MAP</span></code> environment
    variable.</p>
</div>
</div>

<pre><span id="VALdebug_prefix_map_flags"><span class="keyword">val</span> debug_prefix_map_flags</span> : <code class="type">unit -&gt; string list</code></pre><div class="info ">
<div class="info-desc">
<p>Returns the list of <code class="code">--debug-prefix-map</code> flags to be passed to the
    assembler, built from the <code class="code"><span class="constructor">BUILD_PATH_PREFIX_MAP</span></code> environment variable.</p>
</div>
</div>

<pre><span id="VALprint_if"><span class="keyword">val</span> print_if</span> : <code class="type">Format.formatter -&gt;<br>       bool ref -&gt; (Format.formatter -&gt; 'a -&gt; unit) -&gt; 'a -&gt; 'a</code></pre><div class="info ">
<div class="info-desc">
<p><code class="code">print_if&nbsp;ppf&nbsp;flag&nbsp;fmt&nbsp;x</code> prints <code class="code">x</code> with <code class="code">fmt</code> on <code class="code">ppf</code> if <code class="code">b</code> is true.</p>
</div>
</div>

<pre><span id="TYPEfilepath"><span class="keyword">type</span> <code class="type"></code>filepath</span> = <code class="type">string</code> </pre>


<pre><span id="TYPEmodname"><span class="keyword">type</span> <code class="type"></code>modname</span> = <code class="type">string</code> </pre>


<pre><span id="TYPEcrcs"><span class="keyword">type</span> <code class="type"></code>crcs</span> = <code class="type">(<a href="Misc.html#TYPEmodname">modname</a> * Digest.t option) list</code> </pre>


<pre><span id="TYPEalerts"><span class="keyword">type</span> <code class="type"></code>alerts</span> = <code class="type">string Stdlib.String.Map.t</code> </pre>


<pre><span id="MODULEEnvLazy"><span class="keyword">module</span> <a href="Misc.EnvLazy.html">EnvLazy</a></span>: <code class="code"><span class="keyword">sig</span></code> <a href="Misc.EnvLazy.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>
<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>